
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tv ;
struct timeval {scalar_t__ sun_path; int sun_family; } ;
struct sockaddr {int dummy; } ;
struct realloc_thread_arg {void* recv_fd; struct timeval addr; void* send_fd; } ;


 int AF_UNIX ;
 int SOCK_DGRAM ;
 int SOL_SOCKET ;
 int SO_SNDTIMEO ;
 scalar_t__ _bind (void*,struct sockaddr*,int) ;
 scalar_t__ _connect (void*,struct sockaddr*,int) ;
 int _gettid () ;
 scalar_t__ _setsockopt (void*,int ,int ,struct timeval*,int) ;
 void* _socket (int ,int ,int ) ;
 int memset (struct timeval*,int ,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int sprintf (scalar_t__,char*,int ,int) ;

__attribute__((used)) static int init_unix_sockets(struct realloc_thread_arg * rta)
{
  struct timeval tv;
  static int sock_counter = 0;

  if (((rta->recv_fd = _socket(AF_UNIX, SOCK_DGRAM, 0)) < 0) ||
      ((rta->send_fd = _socket(AF_UNIX, SOCK_DGRAM, 0)) < 0))
  {
    perror("[-] socket");
    goto fail;
  }


  memset(&rta->addr, 0, sizeof(rta->addr));
  rta->addr.sun_family = AF_UNIX;
  sprintf(rta->addr.sun_path + 1, "sock_%lx_%d", _gettid(), ++sock_counter);
  if (_bind(rta->recv_fd, (struct sockaddr*)&rta->addr, sizeof(rta->addr)))
  {
    perror("[-] bind");
    goto fail;
  }

  if (_connect(rta->send_fd, (struct sockaddr*)&rta->addr, sizeof(rta->addr)))
  {
    perror("[-] connect");
    goto fail;
  }


  memset(&tv, 0, sizeof(tv));
  if (_setsockopt(rta->recv_fd, SOL_SOCKET, SO_SNDTIMEO, &tv, sizeof(tv)))
  {
    perror("[-] setsockopt");
    goto fail;
  }

  return 0;

fail:

  printf("[-] failed to initialize UNIX sockets!\n");
  return -1;
}
